// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing BarIndicator Component renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BarIndicator
    delay={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "animation": "fadeIn",
      "children": <Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 11.5,
              "marginLeft": 35,
              "marginRight": 20,
              "marginTop": 5,
            }
          }
        >
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "30%",
                },
              ]
            }
          />
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "100%",
                },
              ]
            }
          />
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "100%",
                },
              ]
            }
          />
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "backgroundColor": "#eee",
              "height": 1,
              "marginLeft": 35,
              "marginTop": 5,
              "width": "100%",
            }
          }
        />
      </Styled(ViewNB)>,
      "delay": 0,
      "direction": "normal",
      "duration": 250,
      "easing": undefined,
      "iterationCount": 1,
      "iterationDelay": 0,
      "onAnimationBegin": [Function],
      "onAnimationEnd": [Function],
      "onTransitionBegin": [Function],
      "onTransitionEnd": [Function],
      "style": undefined,
      "transition": undefined,
      "useNativeDriver": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(ViewNB)
            style={
              Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              }
            }
          >
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
          </Styled(ViewNB)>,
          <Styled(ViewNB)
            style={
              Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              }
            }
          />,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ]
                }
              />,
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />,
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />,
            ],
            "style": Object {
              "marginBottom": 11.5,
              "marginLeft": 35,
              "marginRight": 20,
              "marginTop": 5,
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#eee",
              "height": 1,
              "marginLeft": 35,
              "marginTop": 5,
              "width": "100%",
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animation": "fadeIn",
        "children": <Styled(ViewNB)>
          <Styled(ViewNB)
            style={
              Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              }
            }
          >
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
          </Styled(ViewNB)>
          <Styled(ViewNB)
            style={
              Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              }
            }
          />
        </Styled(ViewNB)>,
        "delay": 0,
        "direction": "normal",
        "duration": 250,
        "easing": undefined,
        "iterationCount": 1,
        "iterationDelay": 0,
        "onAnimationBegin": [Function],
        "onAnimationEnd": [Function],
        "onTransitionBegin": [Function],
        "onTransitionEnd": [Function],
        "style": undefined,
        "transition": undefined,
        "useNativeDriver": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(ViewNB)
              style={
                Object {
                  "marginBottom": 11.5,
                  "marginLeft": 35,
                  "marginRight": 20,
                  "marginTop": 5,
                }
              }
            >
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ]
                }
              />
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />
            </Styled(ViewNB)>,
            <Styled(ViewNB)
              style={
                Object {
                  "backgroundColor": "#eee",
                  "height": 1,
                  "marginLeft": 35,
                  "marginTop": 5,
                  "width": "100%",
                }
              }
            />,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "30%",
                      },
                    ]
                  }
                />,
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "100%",
                      },
                    ]
                  }
                />,
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "100%",
                      },
                    ]
                  }
                />,
              ],
              "style": Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing BarIndicator Component renders with delayed animation 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BarIndicator
    delay={0}
    delayed={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "animation": "fadeIn",
      "children": <Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 11.5,
              "marginLeft": 35,
              "marginRight": 20,
              "marginTop": 5,
            }
          }
        >
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "30%",
                },
              ]
            }
          />
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "100%",
                },
              ]
            }
          />
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "100%",
                },
              ]
            }
          />
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "backgroundColor": "#eee",
              "height": 1,
              "marginLeft": 35,
              "marginTop": 5,
              "width": "100%",
            }
          }
        />
      </Styled(ViewNB)>,
      "delay": 0,
      "direction": "normal",
      "duration": 250,
      "easing": undefined,
      "iterationCount": 1,
      "iterationDelay": 0,
      "onAnimationBegin": [Function],
      "onAnimationEnd": [Function],
      "onTransitionBegin": [Function],
      "onTransitionEnd": [Function],
      "style": undefined,
      "transition": undefined,
      "useNativeDriver": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(ViewNB)
            style={
              Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              }
            }
          >
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
          </Styled(ViewNB)>,
          <Styled(ViewNB)
            style={
              Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              }
            }
          />,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ]
                }
              />,
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />,
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />,
            ],
            "style": Object {
              "marginBottom": 11.5,
              "marginLeft": 35,
              "marginRight": 20,
              "marginTop": 5,
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#eee",
              "height": 1,
              "marginLeft": 35,
              "marginTop": 5,
              "width": "100%",
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animation": "fadeIn",
        "children": <Styled(ViewNB)>
          <Styled(ViewNB)
            style={
              Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              }
            }
          >
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
          </Styled(ViewNB)>
          <Styled(ViewNB)
            style={
              Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              }
            }
          />
        </Styled(ViewNB)>,
        "delay": 0,
        "direction": "normal",
        "duration": 250,
        "easing": undefined,
        "iterationCount": 1,
        "iterationDelay": 0,
        "onAnimationBegin": [Function],
        "onAnimationEnd": [Function],
        "onTransitionBegin": [Function],
        "onTransitionEnd": [Function],
        "style": undefined,
        "transition": undefined,
        "useNativeDriver": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(ViewNB)
              style={
                Object {
                  "marginBottom": 11.5,
                  "marginLeft": 35,
                  "marginRight": 20,
                  "marginTop": 5,
                }
              }
            >
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ]
                }
              />
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />
            </Styled(ViewNB)>,
            <Styled(ViewNB)
              style={
                Object {
                  "backgroundColor": "#eee",
                  "height": 1,
                  "marginLeft": 35,
                  "marginTop": 5,
                  "width": "100%",
                }
              }
            />,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "30%",
                      },
                    ]
                  }
                />,
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "100%",
                      },
                    ]
                  }
                />,
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "100%",
                      },
                    ]
                  }
                />,
              ],
              "style": Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing BarIndicator Component renders without animatio  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BarIndicator
    delay={0}
    stalled={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 11.5,
              "marginLeft": 35,
              "marginRight": 20,
              "marginTop": 5,
            }
          }
        >
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "30%",
                },
              ]
            }
          />
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "100%",
                },
              ]
            }
          />
          <Placeholder
            style={
              Array [
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "#eee",
                  "borderRadius": 2.5,
                  "height": 10,
                  "justifyContent": "center",
                  "marginTop": 10,
                },
                Object {
                  "width": "100%",
                },
              ]
            }
          />
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "backgroundColor": "#eee",
              "height": 1,
              "marginLeft": 35,
              "marginTop": 5,
              "width": "100%",
            }
          }
        />
      </Styled(ViewNB)>,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(ViewNB)
            style={
              Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              }
            }
          >
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
          </Styled(ViewNB)>,
          <Styled(ViewNB)
            style={
              Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              }
            }
          />,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ]
                }
              />,
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />,
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />,
            ],
            "style": Object {
              "marginBottom": 11.5,
              "marginLeft": 35,
              "marginRight": 20,
              "marginTop": 5,
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#eee",
              "height": 1,
              "marginLeft": 35,
              "marginTop": 5,
              "width": "100%",
            },
            "virtual": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(ViewNB)>
          <Styled(ViewNB)
            style={
              Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              }
            }
          >
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "30%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
            <Placeholder
              style={
                Array [
                  Object {
                    "alignSelf": "flex-start",
                    "backgroundColor": "#eee",
                    "borderRadius": 2.5,
                    "height": 10,
                    "justifyContent": "center",
                    "marginTop": 10,
                  },
                  Object {
                    "width": "100%",
                  },
                ]
              }
            />
          </Styled(ViewNB)>
          <Styled(ViewNB)
            style={
              Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              }
            }
          />
        </Styled(ViewNB)>,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(ViewNB)
              style={
                Object {
                  "marginBottom": 11.5,
                  "marginLeft": 35,
                  "marginRight": 20,
                  "marginTop": 5,
                }
              }
            >
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ]
                }
              />
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />
              <Placeholder
                style={
                  Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ]
                }
              />
            </Styled(ViewNB)>,
            <Styled(ViewNB)
              style={
                Object {
                  "backgroundColor": "#eee",
                  "height": 1,
                  "marginLeft": 35,
                  "marginTop": 5,
                  "width": "100%",
                }
              }
            />,
          ],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "30%",
                      },
                    ]
                  }
                />,
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "100%",
                      },
                    ]
                  }
                />,
                <Placeholder
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "backgroundColor": "#eee",
                        "borderRadius": 2.5,
                        "height": 10,
                        "justifyContent": "center",
                        "marginTop": 10,
                      },
                      Object {
                        "width": "100%",
                      },
                    ]
                  }
                />,
              ],
              "style": Object {
                "marginBottom": 11.5,
                "marginLeft": 35,
                "marginRight": 20,
                "marginTop": 5,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "30%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "style": Array [
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "#eee",
                      "borderRadius": 2.5,
                      "height": 10,
                      "justifyContent": "center",
                      "marginTop": 10,
                    },
                    Object {
                      "width": "100%",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "backgroundColor": "#eee",
                "height": 1,
                "marginLeft": 35,
                "marginTop": 5,
                "width": "100%",
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
